--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "clipboard-copy": "^4.0.1",
+    "ethers": "^5.7.1",
+    "mongoose": "^7.6.3",
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
