--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "clipboard-copy": "^4.0.1",
     "ethers": "^5.7.1",
     "mongoose": "^7.6.3",
